fix btn and modal

--- a/404.html
+++ b/404.html
@@ -122,8 +122,8 @@
 			<p>Запрашиваемая Вами страница не найдена или не существует</p>	
 			<p>&nbsp;</p>
 			<p>	
-			<a href="/" class="btn__item   ">
-<span class="btn__item-name">Ha главную</span>
+			<a href="/" class="btn__item    ">
+	<span class="btn__name">Ha главную</span>
 </a>   
 			</p>
 		</div>
