--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<h1 class="header-block__heading">Ремонт, реставрация и замена окон в Москве</h1>
 				<div class="header-block__heading-small">Никогда не настаиваем на замене, если можно отремонтировать.</div>
 				<div class="header-block__btn">						
-					<button type="button" class="btn__item   " data-toggle="modal" data-target="#modal-calc">Предварительный рассчет</button>
+					
 				</div>
 			</div>
 		</div>
@@ -283,8 +283,8 @@
 			</div>
 		</div>
 		<div class="content-block__btn  is--services-index  is--center">
-			<a href="/services.html" class="btn__item   ">
-<span class="btn__item-name">Все услуги</span>
+			<a href="/services.html" class="btn__item    ">
+	<span class="btn__name">Все услуги</span>
 </a>  
 		</div>
 	</div>
@@ -359,8 +359,8 @@
 			</div>
 		</div>
 		<div class="content-block__btn  is--portfolio-index  is--center">
-			<a href="/portfolio.html" class="btn__item   ">
-<span class="btn__item-name">Смотреть все работы</span>
+			<a href="/portfolio.html" class="btn__item    ">
+	<span class="btn__name">Смотреть все работы</span>
 </a>  
 		</div>
 	</div>
@@ -388,18 +388,17 @@
 </div>
 			</div>
 			<div class="cols form__cols  is--calc  is--agreement">
-				<div class="form__item  is--switch  is--calc    ">
-	<div class="form__switch  is--calc    ">
-		<input class="form__switch-input validate[required]  is--calc  is--white    " id="fscalc[agreement]" name="f[Согласие на обработку персональных данных]" type="checkbox"  checked/>
-		<label for="fscalc[agreement]" class="form__switch-label    is--calc  is--white    "></label> 
-		<label for="fscalc[agreement]" class="form__switch-text    is--calc  is--white    "> 
-			Я согласен на обработку <a href='/agreement.html' target='_blank'>персональных данных</a>
-		</label>
+				<div class="form__item  is--agreement  is--calc    ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text  is--calc    ">		
+		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
 </div>	
 			</div>
 			<div class="cols form__cols  is--calc  is--btn">
-				<button type="submit" class="btn__item  is--sm  is--block">Отправить</button>				
+				<button type="submit" class="btn__item  is--sm  is--block">
+	<span class="btn__name">Отправить</span>
+</button>				
 			</div>
 		</div>	
 	</div> 
@@ -516,32 +515,32 @@
 svg4everybody();
 document.createElement("picture");
 </script> 
-		<div class="modal fade modal-base__modal" id="modal-message" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-base__dialog">
-		<div class="modal-body modal-base__body" >
-			<button type="button" class="btn-site  modal-base__close  modal-close" data-dismiss="modal" aria-hidden="true">
+		<div class="modal__block  fade    " id="modal-message" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
 				<svg class="icon-svg icon-modal-close" role="img">
 	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
 </svg>
 			</button>
-			<div class="modal-content modal-base__content">
+			<div class="modal__content    ">
 				<div class="page-header__block  is--modals">
 	<h4 class="page-header__heading  is--modals"><span>Ваше сообщение успешно отправлено!</span></h4>	
 	<div class="page-header__heading-small  is--modals">Мы свяжемся с вами в ближайшее время.</div>		
-</div>	
+</div>
 			</div> 
 		</div>
 	</div>
 </div>
-<div class="modal fade modal-base__modal    " id="modal-calc" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-base__dialog    ">
-		<div class="modal-body modal-base__body    " >
-			<button type="button" class="btn-site  modal-base__close  modal-close" data-dismiss="modal" aria-hidden="true">
+<div class="modal__block  fade    " id="modal-calc" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
 				<svg class="icon-svg icon-modal-close" role="img">
 	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
 </svg>
 			</button>
-			<div class="modal-content modal-base__content    ">
+			<div class="modal__content    ">
 				<div class="form-panel__panel    ">
 	<div class="form-panel__panel-inner    ">
 		<div class="page-header__block  is--modals">
@@ -564,18 +563,17 @@ document.createElement("picture");
 </div>
 			</div>
 			<div class="cols form__cols      is--agreement">
-				<div class="form__item  is--switch        ">
-	<div class="form__switch        ">
-		<input class="form__switch-input validate[required]            " id="fsord[agreement]" name="f[Согласие на обработку персональных данных]" type="checkbox"  checked/>
-		<label for="fsord[agreement]" class="form__switch-label              "></label> 
-		<label for="fsord[agreement]" class="form__switch-text              "> 
-			Я согласен на обработку <a href='/agreement.html' target='_blank'>персональных данных</a>
-		</label>
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить заявку» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
 </div>	
 			</div>
 			<div class="cols form__cols      is--btn">
-				<button type="submit" class="btn__item    ">Отправить заявку</button>				
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить заявку</span>
+</button>				
 			</div>
 		</div>	
 	</div> 
@@ -586,15 +584,15 @@ document.createElement("picture");
 		</div>
 	</div>
 </div>
-<div class="modal fade modal-base__modal    " id="modal-call" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-base__dialog    ">
-		<div class="modal-body modal-base__body    " >
-			<button type="button" class="btn-site  modal-base__close  modal-close" data-dismiss="modal" aria-hidden="true">
+<div class="modal__block  fade    " id="modal-call" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
 				<svg class="icon-svg icon-modal-close" role="img">
 	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
 </svg>
 			</button>
-			<div class="modal-content modal-base__content    ">
+			<div class="modal__content    ">
 				<div class="form-panel__panel    ">
 	<div class="form-panel__panel-inner    ">
 		<div class="page-header__block  is--modals">
@@ -617,18 +615,17 @@ document.createElement("picture");
 </div>
 			</div>
 			<div class="cols form__cols      is--agreement">
-				<div class="form__item  is--switch        ">
-	<div class="form__switch        ">
-		<input class="form__switch-input validate[required]            " id="fsord[agreement]" name="f[Согласие на обработку персональных данных]" type="checkbox"  checked/>
-		<label for="fsord[agreement]" class="form__switch-label              "></label> 
-		<label for="fsord[agreement]" class="form__switch-text              "> 
-			Я согласен на обработку <a href='/agreement.html' target='_blank'>персональных данных</a>
-		</label>
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
 </div>	
 			</div>
 			<div class="cols form__cols      is--btn">
-				<button type="submit" class="btn__item    ">Отправить</button>				
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить</span>
+</button>				
 			</div>
 		</div>	
 	</div> 
