--- a/sitemap.html
+++ b/sitemap.html
@@ -208,6 +208,127 @@
 <script>
 svg4everybody();
 document.createElement("picture");
-</script>   
+</script> 
+		<div class="modal__block  fade    " id="modal-message" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
+				<svg class="icon-svg icon-modal-close" role="img">
+	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
+</svg>
+			</button>
+			<div class="modal__content    ">
+				<div class="page-header__block  is--modals">
+	<h4 class="page-header__heading  is--modals"><span>Ваше сообщение успешно отправлено!</span></h4>	
+	<div class="page-header__heading-small  is--modals">Мы свяжемся с вами в ближайшее время.</div>		
+</div>
+			</div> 
+		</div>
+	</div>
+</div>
+<div class="modal__block  fade    " id="modal-calc" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
+				<svg class="icon-svg icon-modal-close" role="img">
+	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
+</svg>
+			</button>
+			<div class="modal__content    ">
+				<div class="form-panel__panel    ">
+	<div class="form-panel__panel-inner    ">
+		<div class="page-header__block  is--modals">
+	<h3 class="page-header__heading  is--modals"><span>Рассчитать стоимость</span></h3>	
+	<div class="page-header__heading-small  is--modals">Мы перезвоним вам в ближайшее время</div>		
+</div>
+		<form action="#" class="form__block    "  >
+	<input type="hidden" name="key" value="londonisthecapitalofgreatbritain">
+	<input type="hidden" name="f[Форма: Рассчитать стоимость]">
+	<div class="form__inner    "  >
+		<div class="row form__row      is--wrap">
+			<div class="cols form__cols      is--name">
+				<div class="form__item      is--name">
+	<input type="text"     class="form__control form-control validate[required, custom[onlyLetterSp]]          is--name" id="fsord[name]" name="f[Имя]" placeholder="Имя и Фамилия">
+</div>
+			</div>
+			<div class="cols form__cols      is--tel">
+				<div class="form__item      is--tel">
+	<input type="tel"     class="form__control form-control validate[required, custom[phone]]          is--tel" id="fsord[tel]" name="f[Номер телефона]" placeholder="Номер телефона">
+</div>
+			</div>
+			<div class="cols form__cols      is--agreement">
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить заявку» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+	</div>	
+</div>	
+			</div>
+			<div class="cols form__cols      is--btn">
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить заявку</span>
+</button>				
+			</div>
+		</div>	
+	</div> 
+</form> 	
+	</div>
+</div> 
+			</div> 
+		</div>
+	</div>
+</div>
+<div class="modal__block  fade    " id="modal-call" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
+				<svg class="icon-svg icon-modal-close" role="img">
+	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
+</svg>
+			</button>
+			<div class="modal__content    ">
+				<div class="form-panel__panel    ">
+	<div class="form-panel__panel-inner    ">
+		<div class="page-header__block  is--modals">
+	<h3 class="page-header__heading  is--modals"><span>Заказать звонок</span></h3>	
+	<div class="page-header__heading-small  is--modals">Мы перезвоним вам в ближайшее время</div>		
+</div>
+		<form action="#" class="form__block    "  >
+	<input type="hidden" name="key" value="londonisthecapitalofgreatbritain">
+	<input type="hidden" name="f[Форма: Заказать звонок]">
+	<div class="form__inner    "  >
+		<div class="row form__row      is--wrap">
+			<div class="cols form__cols      is--name">
+				<div class="form__item      is--name">
+	<input type="text"     class="form__control form-control validate[required, custom[onlyLetterSp]]          is--name" id="fsord[name]" name="f[Имя]" placeholder="Имя и Фамилия">
+</div>
+			</div>
+			<div class="cols form__cols      is--tel">
+				<div class="form__item      is--tel">
+	<input type="tel"     class="form__control form-control validate[required, custom[phone]]          is--tel" id="fsord[tel]" name="f[Номер телефона]" placeholder="Номер телефона">
+</div>
+			</div>
+			<div class="cols form__cols      is--agreement">
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+	</div>	
+</div>	
+			</div>
+			<div class="cols form__cols      is--btn">
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить</span>
+</button>				
+			</div>
+		</div>	
+	</div> 
+</form> 	
+	</div>
+</div> 
+			</div> 
+		</div>
+	</div>
+</div>  
 	</body>
 </html>
