--- a/src/block/site/default/button/link-target.html
+++ b/src/block/site/default/button/link-target.html
@@ -1,1 +1,3 @@
-<a href="{{button_link}}" target="_blank" class="{{button_prefix}}item {{button_mod}}"><span>{{button_name}}</span></a> 
+<a href="{{button_link}}" target="_blank" class="{{button_prefix}}item  {{button_mod}}">
+	<span class="{{button_prefix}}name">{{button_name}}</span>
+</a>  
