--- a/src/block/site/default/form/elem-agreement.html
+++ b/src/block/site/default/form/elem-agreement.html
@@ -1,4 +1,5 @@
 <div class="{{block_prefix}}item  is--agreement  {{block_mod}}  {{block_mod_elem}}">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
 	<div class="{{form_prefix}}text  {{block_mod}}  {{block_mod_elem}}">		
 		{{block_text}}
 	</div>	
