--- a/src/block/site/default/modals/include.html
+++ b/src/block/site/default/modals/include.html
@@ -1,6 +1,6 @@
 [[azbntple 
 	tpl="/src/block/site/default/modals/message.html"
-	modals_prefix="modal-base__" 
+	modals_prefix="modal__" 
 	modals_id="modal-message"
 	modals_mod="  "
 	modals_heading="Ваше сообщение успешно отправлено!"
@@ -8,7 +8,7 @@
 ]]
 [[azbntple 
 	tpl="/src/block/site/default/modals/calc.html"
-	modals_prefix="modal-base__" 
+	modals_prefix="modal__" 
 	modals_id="modal-calc"
 	modals_mod="  "
 	modals_heading="Рассчитать стоимость"
@@ -19,7 +19,7 @@
 ]]
 [[azbntple 
 	tpl="/src/block/site/default/modals/calc.html"
-	modals_prefix="modal-base__" 
+	modals_prefix="modal__" 
 	modals_id="modal-call"
 	modals_mod="  "
 	modals_heading="Заказать звонок"
