--- a/src/html/style.html
+++ b/src/html/style.html
@@ -25,14 +25,7 @@
 			tpl="/src/block/site/default/footer/.html"
 			footer_prefix="footer__" 
 		]]
-		[[azbntple 
-			tpl="/src/block/site/default/modals/message.html"
-			modals_prefix="modal-base__" 
-			modals_id="modal-message"
-			modals_mod="  "
-			modals_heading="Ваше сообщение успешно отправлено!"
-			modals_note="Мы свяжемся с вами в ближайшее время."
-		]]
 		[[azbntple tpl="/src/block/site/default/script/script.html" ]]
+		[[azbntple tpl="/src/block/site/default/modals/include.html" ]]
 	</body>
 </html>
