--- a/style.html
+++ b/style.html
@@ -263,21 +263,23 @@
 <!-- Кнопка-ссылка -->
 <h4 class="content-block__heading">Кнопки и ссылки</h4>
 <div style="margin-bottom: 20px;">		
-	<a href="/" class="btn__item   ">
-<span class="btn__item-name">Предварительный рассчет</span>
+	<a href="/" class="btn__item    ">
+	<span class="btn__name">Предварительный рассчет</span>
 </a>  
 </div>
 <div style="margin-bottom: 20px;">	 	
-	<button type="button" class="btn__item is--invers" data-toggle="modal" data-target="#modal-message">Модальное окно</button>	
+	<button type="button" class="btn__item  is--invers" data-toggle="modal" data-target="#modal-message">
+	<span class="btn__name">Модальное окно</span>
+</button>	
 </div>
 <div style="margin-bottom: 25px;">		
-	<a href="/" class="btn__item is--white">
-<span class="btn__item-name">Предварительный рассчет</span>
+	<a href="/" class="btn__item  is--white">
+	<span class="btn__name">Предварительный рассчет</span>
 </a>  
 </div>
 <div style="margin-bottom: 20px;">	
-	<a href="##" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+	<a href="##" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 </div>
 
@@ -719,12 +721,12 @@
 	<div class="form-panel__panel  is--reviews">
 	<div class="form-panel__panel-inner  is--reviews">
 		<div class="page-header__block  is--form-panel  is--reviews">
-	<h3 class="page-header__heading  is--form-panel  is--reviews"><span>Оставьте свой отзыв о нашей работе</span></h3>	
-	<div class="page-header__heading-small  is--form-panel  is--reviews"><p>Команда компании ОкнаStory будет признательна всем заказчикам, для которых трудились наши специалисты, за&nbsp;отзывы о&nbsp;проделанной работе и&nbsp;реализованных проектах. Каждый отзыв действительных и&nbsp;потенциальных клиентов дорог для компании, поскольку наличие обратной связи&nbsp;— обязательное условие для развития и&nbsp;совершенствования</p></div>		
+	<h3 class="page-header__heading  is--form-panel  is--reviews"><span>Оставьте свой отзыв</span></h3>	
+	<div class="page-header__heading-small  is--form-panel  is--reviews">  </div>		
 </div>
 		<form action="#" class="form__block  is--reviews"  >
 	<input type="hidden" name="key" value="londonisthecapitalofgreatbritain">
-	<input type="hidden" name="f[Форма: Оставьте свой отзыв о нашей работе]">
+	<input type="hidden" name="f[Форма: Оставьте свой отзыв]">
 	<div class="form__inner  is--reviews"  >
 		<div class="row form__row  is--reviews  is--wrap">
 			<div class="cols form__cols  is--reviews  is--name">
@@ -754,7 +756,9 @@
 </div>	
 			</div>
 			<div class="cols form__cols  is--reviews  is--btn">
-				<button type="submit" class="btn__item    ">Отправить</button>				
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить</span>
+</button>				
 			</div>
 		</div>	
 	</div> 
@@ -762,10 +766,19 @@
 	</div>
 </div> 
 </div>
+<div style="margin-bottom: 20px; max-width: 315px;">
+	<form action="{{page.search}}" class="form__item  is--search    ">
+	<div class="form__search    ">
+		<input type="text" class="form__search-input    " placeholder="Поиск по названию платья" >
+		<button type="submit" class="form__search-btn    ">
+			<svg class="icon-svg icon-icon-search" role="img">
+	<use xlink:href="/img/svg/sprite.svg#icon-search"></use>
+</svg>
+		</button>
+	</div>
+</form>
+</div> 
 <div style="margin-bottom: 20px">
-	
-</div>
-<div>
 	
 </div>
 		</div>
@@ -784,27 +797,19 @@
 				<tbody> 
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 					<tr> 
 						<td>Замена глухого окна на поворотно-откидную створку</td>
-						<td class="is--right">8 000 — 12 000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
+						<td class="is--right">8 000 — 12 000 ₽</td>
 					</tr>
 				</tbody>
 			</table>
@@ -1148,8 +1153,8 @@
 				<h4 class="card-item__heading  is--news"><a href="{{block_link}}">Остекляем балкон и лоджию</a></h4>
 				<div class="card-item__note  is--news">Остекление лоджии или балкона – один из этапов максимально комфортной жизни в квартире. </div>	
 				<div class="card-item__btn  is--news">
-					<a href="{{block_link}}" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="{{block_link}}" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -1178,8 +1183,8 @@
 				<h4 class="card-item__heading  is--news"><a href="{{block_link}}">Остекляем балкон и лоджию</a></h4>
 				<div class="card-item__note  is--news">Остекление лоджии или балкона – один из этапов максимально комфортной жизни в квартире. </div>	
 				<div class="card-item__btn  is--news">
-					<a href="{{block_link}}" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="{{block_link}}" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -1208,8 +1213,8 @@
 				<h4 class="card-item__heading  is--news"><a href="{{block_link}}">Остекляем балкон и лоджию</a></h4>
 				<div class="card-item__note  is--news">Остекление лоджии или балкона – один из этапов максимально комфортной жизни в квартире. </div>	
 				<div class="card-item__btn  is--news">
-					<a href="{{block_link}}" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="{{block_link}}" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -1238,8 +1243,8 @@
 				<h4 class="card-item__heading  is--news"><a href="{{block_link}}">Остекляем балкон и лоджию</a></h4>
 				<div class="card-item__note  is--news">Остекление лоджии или балкона – один из этапов максимально комфортной жизни в квартире. </div>	
 				<div class="card-item__btn  is--news">
-					<a href="{{block_link}}" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="{{block_link}}" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -1268,8 +1273,8 @@
 				<h4 class="card-item__heading  is--news"><a href="{{block_link}}">Остекляем балкон и лоджию</a></h4>
 				<div class="card-item__note  is--news">Остекление лоджии или балкона – один из этапов максимально комфортной жизни в квартире. </div>	
 				<div class="card-item__btn  is--news">
-					<a href="{{block_link}}" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="{{block_link}}" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -1298,8 +1303,8 @@
 				<h4 class="card-item__heading  is--news"><a href="{{block_link}}">Остекляем балкон и лоджию</a></h4>
 				<div class="card-item__note  is--news">Остекление лоджии или балкона – один из этапов максимально комфортной жизни в квартире. </div>	
 				<div class="card-item__btn  is--news">
-					<a href="{{block_link}}" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="{{block_link}}" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -1364,18 +1369,17 @@
 </div>
 			</div>
 			<div class="cols form__cols  is--calc  is--agreement">
-				<div class="form__item  is--switch  is--calc    ">
-	<div class="form__switch  is--calc    ">
-		<input class="form__switch-input validate[required]  is--calc  is--white    " id="fscalc[agreement]" name="f[Согласие на обработку персональных данных]" type="checkbox"  checked/>
-		<label for="fscalc[agreement]" class="form__switch-label    is--calc  is--white    "></label> 
-		<label for="fscalc[agreement]" class="form__switch-text    is--calc  is--white    "> 
-			Я согласен на обработку <a href='/agreement.html' target='_blank'>персональных данных</a>
-		</label>
+				<div class="form__item  is--agreement  is--calc    ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text  is--calc    ">		
+		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
 </div>	
 			</div>
 			<div class="cols form__cols  is--calc  is--btn">
-				<button type="submit" class="btn__item  is--sm">Отправить</button>				
+				<button type="submit" class="btn__item  is--sm">
+	<span class="btn__name">Отправить</span>
+</button>				
 			</div>
 		</div>	
 	</div> 
@@ -1393,7 +1397,7 @@
 	<div class="page-header__heading-small  is--form-block  is--sm">Свяжитесь с нашим специалистом - 8 (495) 991-04-30</div>		
 </div>
 			<div class="form-panel__btn  is--bg  is--call">
-				<button type="button" class="btn__item is--white  is--lg" data-toggle="modal" data-target="#modal-call">Заказать звонок</button>
+				
 			</div>
 		</div>
 	</div>
@@ -1462,23 +1466,6 @@
 		</div>
 	</div>
 </footer>
-		<div class="modal fade modal-base__modal" id="modal-message" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-base__dialog">
-		<div class="modal-body modal-base__body" >
-			<button type="button" class="btn-site  modal-base__close  modal-close" data-dismiss="modal" aria-hidden="true">
-				<svg class="icon-svg icon-modal-close" role="img">
-	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
-</svg>
-			</button>
-			<div class="modal-content modal-base__content">
-				<div class="page-header__block  is--modals">
-	<h4 class="page-header__heading  is--modals"><span>Ваше сообщение успешно отправлено!</span></h4>	
-	<div class="page-header__heading-small  is--modals">Мы свяжемся с вами в ближайшее время.</div>		
-</div>	
-			</div> 
-		</div>
-	</div>
-</div>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -1491,5 +1478,126 @@
 svg4everybody();
 document.createElement("picture");
 </script> 
+		<div class="modal__block  fade    " id="modal-message" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
+				<svg class="icon-svg icon-modal-close" role="img">
+	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
+</svg>
+			</button>
+			<div class="modal__content    ">
+				<div class="page-header__block  is--modals">
+	<h4 class="page-header__heading  is--modals"><span>Ваше сообщение успешно отправлено!</span></h4>	
+	<div class="page-header__heading-small  is--modals">Мы свяжемся с вами в ближайшее время.</div>		
+</div>
+			</div> 
+		</div>
+	</div>
+</div>
+<div class="modal__block  fade    " id="modal-calc" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
+				<svg class="icon-svg icon-modal-close" role="img">
+	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
+</svg>
+			</button>
+			<div class="modal__content    ">
+				<div class="form-panel__panel    ">
+	<div class="form-panel__panel-inner    ">
+		<div class="page-header__block  is--modals">
+	<h3 class="page-header__heading  is--modals"><span>Рассчитать стоимость</span></h3>	
+	<div class="page-header__heading-small  is--modals">Мы перезвоним вам в ближайшее время</div>		
+</div>
+		<form action="#" class="form__block    "  >
+	<input type="hidden" name="key" value="londonisthecapitalofgreatbritain">
+	<input type="hidden" name="f[Форма: Рассчитать стоимость]">
+	<div class="form__inner    "  >
+		<div class="row form__row      is--wrap">
+			<div class="cols form__cols      is--name">
+				<div class="form__item      is--name">
+	<input type="text"     class="form__control form-control validate[required, custom[onlyLetterSp]]          is--name" id="fsord[name]" name="f[Имя]" placeholder="Имя и Фамилия">
+</div>
+			</div>
+			<div class="cols form__cols      is--tel">
+				<div class="form__item      is--tel">
+	<input type="tel"     class="form__control form-control validate[required, custom[phone]]          is--tel" id="fsord[tel]" name="f[Номер телефона]" placeholder="Номер телефона">
+</div>
+			</div>
+			<div class="cols form__cols      is--agreement">
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить заявку» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+	</div>	
+</div>	
+			</div>
+			<div class="cols form__cols      is--btn">
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить заявку</span>
+</button>				
+			</div>
+		</div>	
+	</div> 
+</form> 	
+	</div>
+</div> 
+			</div> 
+		</div>
+	</div>
+</div>
+<div class="modal__block  fade    " id="modal-call" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
+				<svg class="icon-svg icon-modal-close" role="img">
+	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
+</svg>
+			</button>
+			<div class="modal__content    ">
+				<div class="form-panel__panel    ">
+	<div class="form-panel__panel-inner    ">
+		<div class="page-header__block  is--modals">
+	<h3 class="page-header__heading  is--modals"><span>Заказать звонок</span></h3>	
+	<div class="page-header__heading-small  is--modals">Мы перезвоним вам в ближайшее время</div>		
+</div>
+		<form action="#" class="form__block    "  >
+	<input type="hidden" name="key" value="londonisthecapitalofgreatbritain">
+	<input type="hidden" name="f[Форма: Заказать звонок]">
+	<div class="form__inner    "  >
+		<div class="row form__row      is--wrap">
+			<div class="cols form__cols      is--name">
+				<div class="form__item      is--name">
+	<input type="text"     class="form__control form-control validate[required, custom[onlyLetterSp]]          is--name" id="fsord[name]" name="f[Имя]" placeholder="Имя и Фамилия">
+</div>
+			</div>
+			<div class="cols form__cols      is--tel">
+				<div class="form__item      is--tel">
+	<input type="tel"     class="form__control form-control validate[required, custom[phone]]          is--tel" id="fsord[tel]" name="f[Номер телефона]" placeholder="Номер телефона">
+</div>
+			</div>
+			<div class="cols form__cols      is--agreement">
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
+	</div>	
+</div>	
+			</div>
+			<div class="cols form__cols      is--btn">
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить</span>
+</button>				
+			</div>
+		</div>	
+	</div> 
+</form> 	
+	</div>
+</div> 
+			</div> 
+		</div>
+	</div>
+</div>
 	</body>
 </html>
