--- a/articles.html
+++ b/articles.html
@@ -141,8 +141,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Остекляем балкон и лоджию</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -171,8 +171,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Что стоит знать о материале для создания пластиковых окон</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -201,8 +201,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как ухаживать за ПВХ окном</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -231,8 +231,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как увеличить срок службы окна</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -261,8 +261,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Стоит ли снимать москитку</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -291,8 +291,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как защитить окна от детей</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -321,8 +321,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как утеплить деревянные окна</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -351,8 +351,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как выбрать пластиковое окно</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -381,8 +381,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как исключить запотеания окна?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -411,8 +411,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Готовим окна к зиме</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -441,8 +441,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Каковы причины поломки пластиковых окон?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -471,8 +471,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Какие проблемы возникают с пластиковыми окнами?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -501,8 +501,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как правильно выполнять уход за пластиковыми окнами?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -531,8 +531,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Правильный уход за пластиковыми окнами</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -561,8 +561,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как старое пластиковое окно заменяется на новое?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -591,8 +591,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Как выполняется монтаж стеклопакетов?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -621,8 +621,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Стоит ли устанавливать пластиковые окна в загородном доме?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -651,8 +651,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Какой подоконник стоит подобрать для пластикового окна?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -681,8 +681,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">В чем причина частого использования пластиковых откосов?</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -711,8 +711,8 @@
 				<h4 class="card-item__heading  is--news"><a href="/articles-card.html">Типовые проблемы с окнами ПВХ</a></h4>
 				<div class="card-item__note  is--news">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, tempore.</div>	
 				<div class="card-item__btn  is--news">
-					<a href="/articles-card.html" class="btn-link__item   ">
-<span class="btn-link__item-name">Подробнее</span>
+					<a href="/articles-card.html" class="btn-link__item    ">
+	<span class="btn-link__name">Подробнее</span>
 </a>  
 				</div>
 			</div>
@@ -732,7 +732,7 @@
 	<div class="page-header__heading-small  is--form-block  is--sm">Свяжитесь с нашим специалистом - 8 (495) 991-04-30</div>		
 </div>
 			<div class="form-panel__btn  is--bg  is--call">
-				<button type="button" class="btn__item is--white  is--lg" data-toggle="modal" data-target="#modal-call">Заказать звонок</button>
+				
 			</div>
 		</div>
 	</div>
@@ -808,32 +808,32 @@
 svg4everybody();
 document.createElement("picture");
 </script> 
-		<div class="modal fade modal-base__modal" id="modal-message" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-base__dialog">
-		<div class="modal-body modal-base__body" >
-			<button type="button" class="btn-site  modal-base__close  modal-close" data-dismiss="modal" aria-hidden="true">
+		<div class="modal__block  fade    " id="modal-message" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
 				<svg class="icon-svg icon-modal-close" role="img">
 	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
 </svg>
 			</button>
-			<div class="modal-content modal-base__content">
+			<div class="modal__content    ">
 				<div class="page-header__block  is--modals">
 	<h4 class="page-header__heading  is--modals"><span>Ваше сообщение успешно отправлено!</span></h4>	
 	<div class="page-header__heading-small  is--modals">Мы свяжемся с вами в ближайшее время.</div>		
-</div>	
+</div>
 			</div> 
 		</div>
 	</div>
 </div>
-<div class="modal fade modal-base__modal    " id="modal-calc" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-base__dialog    ">
-		<div class="modal-body modal-base__body    " >
-			<button type="button" class="btn-site  modal-base__close  modal-close" data-dismiss="modal" aria-hidden="true">
+<div class="modal__block  fade    " id="modal-calc" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
 				<svg class="icon-svg icon-modal-close" role="img">
 	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
 </svg>
 			</button>
-			<div class="modal-content modal-base__content    ">
+			<div class="modal__content    ">
 				<div class="form-panel__panel    ">
 	<div class="form-panel__panel-inner    ">
 		<div class="page-header__block  is--modals">
@@ -856,18 +856,17 @@ document.createElement("picture");
 </div>
 			</div>
 			<div class="cols form__cols      is--agreement">
-				<div class="form__item  is--switch        ">
-	<div class="form__switch        ">
-		<input class="form__switch-input validate[required]            " id="fsord[agreement]" name="f[Согласие на обработку персональных данных]" type="checkbox"  checked/>
-		<label for="fsord[agreement]" class="form__switch-label              "></label> 
-		<label for="fsord[agreement]" class="form__switch-text              "> 
-			Я согласен на обработку <a href='/agreement.html' target='_blank'>персональных данных</a>
-		</label>
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить заявку» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
 </div>	
 			</div>
 			<div class="cols form__cols      is--btn">
-				<button type="submit" class="btn__item    ">Отправить заявку</button>				
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить заявку</span>
+</button>				
 			</div>
 		</div>	
 	</div> 
@@ -878,15 +877,15 @@ document.createElement("picture");
 		</div>
 	</div>
 </div>
-<div class="modal fade modal-base__modal    " id="modal-call" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-base__dialog    ">
-		<div class="modal-body modal-base__body    " >
-			<button type="button" class="btn-site  modal-base__close  modal-close" data-dismiss="modal" aria-hidden="true">
+<div class="modal__block  fade    " id="modal-call" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal__dialog    ">
+		<div class="modal__body    " >
+			<button type="button" class="modal__btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
 				<svg class="icon-svg icon-modal-close" role="img">
 	<use xlink:href="/img/svg/sprite.svg#modal-close"></use>
 </svg>
 			</button>
-			<div class="modal-content modal-base__content    ">
+			<div class="modal__content    ">
 				<div class="form-panel__panel    ">
 	<div class="form-panel__panel-inner    ">
 		<div class="page-header__block  is--modals">
@@ -909,18 +908,17 @@ document.createElement("picture");
 </div>
 			</div>
 			<div class="cols form__cols      is--agreement">
-				<div class="form__item  is--switch        ">
-	<div class="form__switch        ">
-		<input class="form__switch-input validate[required]            " id="fsord[agreement]" name="f[Согласие на обработку персональных данных]" type="checkbox"  checked/>
-		<label for="fsord[agreement]" class="form__switch-label              "></label> 
-		<label for="fsord[agreement]" class="form__switch-text              "> 
-			Я согласен на обработку <a href='/agreement.html' target='_blank'>персональных данных</a>
-		</label>
+				<div class="form__item  is--agreement        ">
+	<input type="hidden" name="f[Согласие на обработку персональных данных]" value="Да">
+	<div class="form__text        ">		
+		Нажимая на кнопку «Отправить» вы соглашаетесть с правилами обработки <a href='/agreement.html' target='_blank'>персональных данных</a>
 	</div>	
 </div>	
 			</div>
 			<div class="cols form__cols      is--btn">
-				<button type="submit" class="btn__item    ">Отправить</button>				
+				<button type="submit" class="btn__item    ">
+	<span class="btn__name">Отправить</span>
+</button>				
 			</div>
 		</div>	
 	</div> 
