--- a/src/block/site/default/form/form-base.html
+++ b/src/block/site/default/form/form-base.html
@@ -53,29 +53,24 @@
 					block_placeholder="Сообщение"
 				]]
 			</div>
+			<div class="cols {{form_prefix}}cols  {{form_mod}}  is--agreement">
+				[[azbntple 
+					tpl="/src/block/site/default/form/elem-agreement.html"
+					block_prefix="{{form_prefix}}"
+					block_mod="{{form_mod}}"
+					block_mod_elem="  "
+					block_color="{{form_color}}"
+					block_text="Нажимая на кнопку «{{form_btn_name}}» вы соглашаетесть с правилами обработки <a href='{{page.agreement}}' target='_blank'>персональных данных</a>"
+				]]	
+			</div>
 			<div class="cols {{form_prefix}}cols  {{form_mod}}  is--btn">
 				[[azbntple 
-					tpl="/src/block/site/default/button/button.html"
+					tpl="/src/block/site/default/button/btn.html"
 					button_prefix="btn__" 
 					button_mod="{{form_btn_mod}}"
 					button_type="submit"
 					button_name="{{form_btn_name}}"
 				]]				
-			</div>
-			<div class="cols {{form_prefix}}cols  {{form_mod}}  is--agreement">
-				[[azbntple 
-					tpl="/src/block/site/default/form/elem-switch.html"
-					form_id="{{form_id}}"
-					block_id="agreement"
-					block_prefix="{{form_prefix}}"
-					block_mod="{{form_mod}}"
-					block_mod_elem="  "
-					block_color="{{form_color}}"
-					block_attr="checked"
-					block_required="required"
-					block_label="Согласие на обработку персональных данных"
-					block_text="Я согласен на обработку <a href='{{url-path-docs}}/agreement.pdf' target='_blank'>персональных данных</a>"
-				]]	
 			</div>
 		</div>	
 	</div> 
