--- a/src/block/site/default/modals/calc.html
+++ b/src/block/site/default/modals/calc.html
@@ -1,10 +1,10 @@
-<div class="modal fade {{modals_prefix}}modal  {{modals_mod}}" id="{{modals_id}}" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog {{modals_prefix}}dialog  {{modals_mod}}">
-		<div class="modal-body {{modals_prefix}}body  {{modals_mod}}" >
-			<button type="button" class="btn-site  {{modals_prefix}}close  modal-close" data-dismiss="modal" aria-hidden="true">
+<div class="{{modals_prefix}}block  fade  {{modals_mod}}" id="{{modals_id}}" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="{{modals_prefix}}dialog  {{modals_mod}}">
+		<div class="{{modals_prefix}}body  {{modals_mod}}" >
+			<button type="button" class="{{modals_prefix}}btn-close  modal-close" data-dismiss="modal" aria-hidden="true">
 				[[azbntple tpl="/src/block/site/default/svg-sprite/.html" icon-name="modal-close"]]
 			</button>
-			<div class="modal-content {{modals_prefix}}content  {{modals_mod}}">
+			<div class="{{modals_prefix}}content  {{modals_mod}}">
 				[[azbntple 
 					tpl="/src/block/site/default/form/panel-calc.html" 
 					block_prefix="form-panel__"
