--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 				<h1 class="header-block__heading">Ремонт, реставрация и замена окон в Москве</h1>
 				<div class="header-block__heading-small">Никогда не настаиваем на замене, если можно отремонтировать.</div>
 				<div class="header-block__btn">						
-					
+					<button type="button" class="btn__item    " data-toggle="modal" data-target="#modal-calc">
+	<span class="btn__name">Предварительный рассчет</span>
+</button>
 				</div>
 			</div>
 		</div>
